static/styles.css
body{
    font-family: 'Roboto', sans-serif;
    font-size: 28px;
    color:white;
    background-color: green;
    text-align: center;
    
}
h1 {
    margin: auto;
    font-size: 40px; 
    border-radius: 20px;
    border-style: solid;
    background-color:#FF6347;
    color:white;
    padding: 0.5em 0.2em 0.8em 0.5em;
}
ol{ 
    font-size: 18px;
    margin-left: 30px;
    font-family: 'Roboto', sans-serif;
    text-align: left;
}
.spoon li {
    margin-top:15px;
    margin-bottom:15px;
    display: inline-block;
    font-size: 30px; 
    border-radius: 20px;
    border-style: dotted;
    background-color:#808000;
    color:white;
    padding: 0.5em 0.2em 0.8em 0.5em;
    
}
.ingredients {
    margin-top:15px;
    margin-bottom:15px;
    text-align: center;
    display: block;
    margin: auto;
    font-size: 30px; 
    border-style: solid;
    border-radius: 20px;
    background-color:#3CB371;
    color:white;
    padding: 0.5em 0.2em 0.8em 0.5em;
}
.ingredients li {
    margin-top:15px;
    margin-bottom:15px;
    text-align:center;
    display: inline-block;
    font-size: 20px; 
    border-style: dotted;
    border-radius: 20px;
    background-color:black;
    color:white;
    padding: 0.5em 0.2em 0.8em 0.5em;
}
.tweet li {
    margin-top:15px;
    margin-bottom:15px;
    display: inline-block;
    font-size: 20px; 
    border-style:dashed;
    border-radius: 20px;
    background-color:black;
    color:white;
    padding: 0.8em 0.2em 0.8em 0.5em;
    
}
.tweet ol {
    margin-top:15px;
    margin-bottom:15px;
    border-style: solid;
    display: inline-block;
    font-size: 25px; 
    border-radius: 20px;
    background-color:#6495ED;
    color:white;
    padding: 0.5em 0.2em 0.8em 0.5em;
    
}
li{
    margin: auto;
    text-align: left;
    font-size: 15px; 
    border-radius: 15px;
    background-color:black;
    color:white;
}

img{
    display:block;
    margin: auto;
    border-style: solid;
    border-radius: 20px;
    background-color:#D8BFD8;
    color:white;
    padding: 0.8em 0.2em 0.8em 0.5em;
    height:300px;
    width:auto;
}

